<resources>
    <string name="app_name">TheBeast</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">544407449082473</string>
    <string name="go_to_fb_login">Login with Facebook!</string>
    <string name="go_to_maps_activity">View Map to Find a Game!</string>
    <string name="title_activity_login_to_facebook">LoginToFacebook</string>
    <string name="user_name">Welcome, </string>
    <string name="sign_in_with_facebook_header">Sign in with Facebook!</string>
    <string name="main_activity_header">Welcome to the Beast!</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home_screen">HomeScreen</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_tab_fragment">TabFragment</string>

    <string name="title_activity_maps">Map</string>
    <string name="about">About…</string>
    <string name="get_location">Get Current Location</string>
    <string name="show_location">Show Current Location</string>
    <string name="about_app">About Where Am I?</string>
    <string name="close">Close</string>
    <string name="code_credit">© 2014 Adam C. Champion</string>
    <string name="prefs">Prefs</string>
    <string name="eula_accepted_key">eula_accepted</string>
    <string name="eula"><p>By using this app, you agree to abide by the <a href="https://developers.google.com/maps/terms">Google Maps Terms of Service</a> and <a href="https://www.google.com/intl/en/policies/terms/">Google\'s Terms of Service</a>.</p><p><strong>Privacy Policy:</strong> Upon request, this app uses your location in order to show it via Google Maps. Internet access permission is necessary for this purpose. No other information is collected, stored, or transmitted.</p></string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="google_play_text_key">google_play_text</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_create_game">Create Game</string>
    <string name="title_activity_game_detail">Game Details</string>

    <string name="sport_spinner_title">Sport</string>
    <string-array name="sport_entries">
        <item>Basketball</item>
        <item>Football</item>
        <item>Soccer</item>
        <item>Volleyball</item>
    </string-array>
    <string name="place_picker_title">Address of location</string>
    <string name="additional_info_title">Additional location info (optional)</string>
    <string name="time_picker_title">Time</string>
    <string name="button_text">EDIT</string>
    <string name="team_size_picker_title">Team size</string>
    <string name="create_button_text">CREATE</string>
    <string name="title_activity_map_viewer">MapViewerActivity</string>

    <string name="info_label">Additional Info: </string>
    <string name="location_label">Location: </string>
    <string name="sport_label">Sport: </string>
    <string name="team_size_label">Team Size: </string>
    <string name="time_label">Time: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_game">ViewGameActivity</string>

    <string name="total_games_played">Total games played: </string>
    <string name="overall_record">Overall record: </string>
    <string name="games_played">Games played: </string>
    <string name="record">Record: </string>
    <string name="goals">Goals: </string>
    <string name="assists">Assists: </string>
    <string name="points">Points: </string>
    <string name="touchdowns">Touchdowns: </string>
    <string name="interceptions">Interceptions: </string>
    <string name="aces">Aces: </string>

</resources>
